# slambot

./: README.md  przedpokoj.yaml
firmware/: 2_dc_encoder.ino
firmware/gLIDAR/: receiver.py
firmware/gLIDAR/include/: DistanceSensor.h  HallSensor.h  Motor.h  PINS.h  Point.h  Sender.h
firmware/gLIDAR/src/: DistanceSensor.cpp  HallSensor.cpp  Motor.cpp  Point.cpp  Sender.cpp  main.cpp
src/diffdrive_esp/: CMakeLists.txt  diffdrive_esp_plugin.xml  package.xml
src/diffdrive_esp/include/diffdrive_esp/: diffdrive_esp.hpp
src/diffdrive_esp/src/: diffdrive_esp.cpp
src/mapping_robot_v1_description/: package.xml  setup.py
src/mapping_robot_v1_description/launch/: display.launch.py  gazebo.launch.py  robot.launch.py  slam_robot.launch.py
src/mapping_robot_v1_description/meshes/: back_left_link_1.stl  back_right_link_1.stl  front_right_link_1.stl
src/mapping_robot_v1_description/urdf/: mapping_robot_v1.gazebo  mapping_robot_v1.trans  mapping_robot_v1.xacro  materials.xacro  ros2_control.xacro
src/scanners_driver/: package.xml  setup.cfg  setup.py
src/scanners_driver/scanners_driver/: lidar_driver.py
src/slambot_description/: package.xml  setup.cfg  setup.py
src/slambot_description/config/: controllers.yaml  slam_toolbox.yaml
src/slambot_description/launch/: robot.launch.py  slam_robot.launch.py
src/slambot_description/maps/: default.pgm  default.yaml  test.data  test.pgm  test.posegraph  test.yaml
src/slambot_description/meshes/: base_link.stl  front_left_link_1.stl
src/slambot_description/urdf/: mapping_robot_v1.trans  mapping_robot_v1.xacro  materials.xacro  ros2_control.xacro
