<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>slambot_description</name>
  <version>0.0.0</version>
<description>The slambot description package</description>
  <maintainer email="kargla@tlen.com">Karol Głąbik</maintainer>
  <license>Apache License 2.0</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
